beta realeased